html css js loader

--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
 </head>
 
 <body class="body">
+
+  <section class="loader loader--fixed" id="loader">
+    <div class="loader__wave"></div>
+    <div class="loader__wave"></div>
+    <div class="loader__wave"></div>
+    <div class="loader__wave"></div>
+    <div class="loader__wave"></div>
+    <div class="loader__wave"></div>
+    <div class="loader__wave"></div>
+    <div class="loader__wave"></div>
+    <div class="loader__wave"></div>
+    <div class="loader__wave"></div>
+  </section>
+
   <header class="header">
     <div class="header__container">
       <h1 class="header__title-logo">Dashboard Feliz</h1>
